--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "npx electron .",
+    "build": "npm install -g electron-packager",
+    "start": "electron-packager . infraLogAnalysis --plataform=win32 --arch=x64 --out=dist"
   },
   "keywords": [],
   "author": "",
