--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
   "license": "ISC",
   "devDependencies": {
     "electron": "^38.0.0"
+  },
+  "dependencies": {
+    "flatpickr": "^4.6.13"
   }
 }
